# SCIG

./: .gitignore  README.md  pyproject.toml  test_samplecig_barcodes.tsv  test_samplecig_genes.tsv
src/: SCIG.py  scig_human_functions.py  scig_mouse_functions.py
test/: README.md  test_scig_human_functions.py  test_scig_mouse_functions.py
