[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "SCIG"
version = "1.0"
description = "SCIG: Specifying the Cell Identity Genes in Single-cells"
authors = [{name = "Kulandaisamy Arulsamy", email = "KulandaiSamy.Arulsamy@childrens.harvard.edu"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "numpy",
    "pandas",
    "qnorm",
    "regex",
    "scikit-learn",
    "rpy2",
    "bioinfokit",
    "anndata",
    "scanpy",
    "argparse",
    "scipy"
]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["SCIG", "scig_human_functions", "scig_mouse_functions"]
script-files = ["src/SCIG.py"]
include-package-data = true

[tool.setuptools.package-data]
"" = ["data/*.pkl", "test/*.txt"]

[tool.setuptools.packages.find]
where = ["src"]
