[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "SCIG"
version = "1.0"
description = "SCIG: Specifying the Cell Identity Genes in Single-cells"
authors = [{name = "Kulandaisamy Arulsamy", email = "KulandaiSamy.Arulsamy@childrens.harvard.edu"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "numpy~=1.25.2",
    "pandas>=2.0.0,<3.0.0",
    "qnorm~=0.8.1",
    "regex~=2023.10.3",
    "scikit-learn~=1.3.2",
    "rpy2~=3.5.15",
    "bioinfokit~=2.1.3",
    "anndata~=0.8.0",
    "scanpy~=1.9.6",
    "argparse~=1.1",
    "scipy~=1.11.3",
    "appdirs>=1.4.0",
    "requests>=2.5.1"
]

[project.scripts]
SCIG = "SCIG:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["SCIG", "scig_human_functions", "scig_mouse_functions"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["data/*.pkl", "test/*.txt"]

[tool.setuptools.packages.find]
where = ["src"]
